// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hides no suggestions on blur 1`] = `
<Autocomplete
  autoFocus={false}
  data={
    Object {
      "items": Array [
        Object {
          "item": "apple",
          "itemInfo": "US",
        },
        Object {
          "item": "alpha",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "IBM",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "kununu",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
        },
      ],
    }
  }
  debounceRate={500}
  disabled={true}
  error={null}
  errorSubInfo={null}
  id="autocompletes"
  inputStyle="inline"
  isRequired={true}
  label="Autocomplete"
  labelHidden={false}
  name="autocomplete"
  noSuggestionText="No results found"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onGetSuggestions={null}
  onSelectSuggestion={null}
  placeholder="Type something..."
  query={Object {}}
  requiredLabel="Required"
  scrollOffset={70}
  scrollTo={true}
  spinner={null}
  submitOnEnter={false}
  value="test"
>
  <div
    className="formGroup inline paddingTop"
    id="autocomplete-container"
  >
    <span
      className="controlNote controlLabelRequired"
    >
      Required
    </span>
    <label
      className="controlLabel"
      htmlFor="autocompletes"
    >
      Autocomplete
    </label>
    <div
      className="autoCompleteContainer"
    >
      <Autosuggest
        alwaysRenderSuggestions={false}
        focusFirstSuggestion={true}
        focusInputOnSuggestionClick={true}
        getSuggestionValue={[Function]}
        highlightFirstSuggestion={false}
        id="autocompletes"
        inputProps={
          Object {
            "autoFocus": false,
            "className": "formControl ",
            "disabled": true,
            "id": "autocompletes",
            "name": "autocomplete",
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Type something...",
            "required": true,
            "value": "z",
          }
        }
        multiSection={false}
        onSuggestionSelected={[Function]}
        onSuggestionsClearRequested={[Function]}
        onSuggestionsFetchRequested={[Function]}
        renderSuggestion={[Function]}
        renderSuggestionsContainer={[Function]}
        shouldRenderSuggestions={[Function]}
        suggestions={Array []}
        theme={null}
      >
        <Autowhatever
          getSectionItems={[Function]}
          highlightedItemIndex={null}
          highlightedSectionIndex={null}
          id="autocompletes"
          inputProps={
            Object {
              "autoFocus": false,
              "className": "formControl ",
              "disabled": true,
              "id": "autocompletes",
              "name": "autocomplete",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": "Type something...",
              "required": true,
              "value": "z",
            }
          }
          itemProps={[Function]}
          items={Array []}
          multiSection={false}
          renderInputComponent={[Function]}
          renderItem={[Function]}
          renderItemData={
            Object {
              "query": "z",
            }
          }
          renderItemsContainer={[Function]}
          renderSectionTitle={[Function]}
          theme={Object {}}
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="react-autowhatever-autocompletes"
            key="react-autowhatever-autocompletes-container"
            role="combobox"
            style={Object {}}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-autocompletes"
              autoComplete="off"
              autoFocus={false}
              className="formControl "
              disabled={true}
              id="autocompletes"
              key="react-autowhatever-autocompletes-input"
              name="autocomplete"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Type something..."
              required={true}
              style={Object {}}
              type="text"
              value="z"
            />
          </div>
        </Autowhatever>
      </Autosuggest>
    </div>
  </div>
</Autocomplete>
`;

exports[`Renders Autocomplete with Error without crashing 1`] = `
<div
  className="formGroup inline paddingTop"
  id="autocomplete-container"
>
  <span
    className="controlNote controlLabelRequired"
  >
    Required
  </span>
  <label
    className="controlLabel controlLabelError"
    htmlFor="autocompletes"
  >
    Autocomplete
  </label>
  <div
    className="autoCompleteContainer"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-autocompletes"
      role="combobox"
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-autocompletes"
        autoComplete="off"
        autoFocus={false}
        className="formControl formControlError"
        disabled={true}
        id="autocompletes"
        name="autocomplete"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type something..."
        required={true}
        style={Object {}}
        type="text"
        value="test"
      />
      <div
        className="suggestionsContainer"
        id="react-autowhatever-autocompletes"
        role="listbox"
        style={Object {}}
      />
    </div>
    
    <span
      className="error"
    >
      <strong
        className="info"
      >
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`Renders Autocomplete without crashing 1`] = `
<div
  className="formGroup inline paddingTop"
  id="autocomplete-container"
>
  <span
    className="controlNote controlLabelRequired"
  >
    Required
  </span>
  <label
    className="controlLabel"
    htmlFor="autocompletes"
  >
    Autocomplete
  </label>
  <div
    className="autoCompleteContainer"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-autocompletes"
      role="combobox"
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-autocompletes"
        autoComplete="off"
        autoFocus={false}
        className="formControl "
        disabled={true}
        id="autocompletes"
        name="autocomplete"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type something..."
        required={true}
        style={Object {}}
        type="text"
        value="test"
      />
      <div
        className="suggestionsContainer"
        id="react-autowhatever-autocompletes"
        role="listbox"
        style={Object {}}
      />
    </div>
    
  </div>
</div>
`;

exports[`Renders no suggestions container 1`] = `
<Autocomplete
  autoFocus={false}
  data={
    Object {
      "items": Array [
        Object {
          "item": "apple",
          "itemInfo": "US",
        },
        Object {
          "item": "alpha",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "IBM",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "kununu",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
        },
      ],
    }
  }
  debounceRate={500}
  disabled={true}
  error={null}
  errorSubInfo={null}
  id="autocompletes"
  inputStyle="inline"
  isRequired={true}
  label="Autocomplete"
  labelHidden={false}
  name="autocomplete"
  noSuggestionText="No results found"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onGetSuggestions={null}
  onSelectSuggestion={null}
  placeholder="Type something..."
  query={Object {}}
  requiredLabel="Required"
  scrollOffset={70}
  scrollTo={true}
  spinner={null}
  submitOnEnter={false}
  value="test"
>
  <div
    className="formGroup inline paddingTop"
    id="autocomplete-container"
  >
    <span
      className="controlNote controlLabelRequired"
    >
      Required
    </span>
    <label
      className="controlLabel"
      htmlFor="autocompletes"
    >
      Autocomplete
    </label>
    <div
      className="autoCompleteContainer"
    >
      <Autosuggest
        alwaysRenderSuggestions={false}
        focusFirstSuggestion={true}
        focusInputOnSuggestionClick={true}
        getSuggestionValue={[Function]}
        highlightFirstSuggestion={false}
        id="autocompletes"
        inputProps={
          Object {
            "autoFocus": false,
            "className": "formControl ",
            "disabled": true,
            "id": "autocompletes",
            "name": "autocomplete",
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Type something...",
            "required": true,
            "value": "z",
          }
        }
        multiSection={false}
        onSuggestionSelected={[Function]}
        onSuggestionsClearRequested={[Function]}
        onSuggestionsFetchRequested={[Function]}
        renderSuggestion={[Function]}
        renderSuggestionsContainer={[Function]}
        shouldRenderSuggestions={[Function]}
        suggestions={
          Array [
            Object {
              "item": "apple",
              "itemInfo": "US",
            },
            Object {
              "item": "alpha",
              "itemInfo": "Vienna",
            },
            Object {
              "item": "IBM",
              "itemInfo": "US",
            },
            Object {
              "item": "kununu",
              "itemInfo": "Vienna",
            },
            Object {
              "item": "kununu",
              "itemInfo": "US",
            },
            Object {
              "item": "kununu",
            },
          ]
        }
        theme={null}
      >
        <Autowhatever
          getSectionItems={[Function]}
          highlightedItemIndex={null}
          highlightedSectionIndex={null}
          id="autocompletes"
          inputProps={
            Object {
              "autoFocus": false,
              "className": "formControl ",
              "disabled": true,
              "id": "autocompletes",
              "name": "autocomplete",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": "Type something...",
              "required": true,
              "value": "z",
            }
          }
          itemProps={[Function]}
          items={
            Array [
              Object {
                "item": "apple",
                "itemInfo": "US",
              },
              Object {
                "item": "alpha",
                "itemInfo": "Vienna",
              },
              Object {
                "item": "IBM",
                "itemInfo": "US",
              },
              Object {
                "item": "kununu",
                "itemInfo": "Vienna",
              },
              Object {
                "item": "kununu",
                "itemInfo": "US",
              },
              Object {
                "item": "kununu",
              },
            ]
          }
          multiSection={false}
          renderInputComponent={[Function]}
          renderItem={[Function]}
          renderItemData={
            Object {
              "query": "z",
            }
          }
          renderItemsContainer={[Function]}
          renderSectionTitle={[Function]}
          theme={Object {}}
        >
          <div
            aria-expanded={true}
            aria-haspopup="listbox"
            aria-owns="react-autowhatever-autocompletes"
            key="react-autowhatever-autocompletes-container"
            role="combobox"
            style={Object {}}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-autocompletes"
              autoComplete="off"
              autoFocus={false}
              className="formControl "
              disabled={true}
              id="autocompletes"
              key="react-autowhatever-autocompletes-input"
              name="autocomplete"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Type something..."
              required={true}
              style={Object {}}
              type="text"
              value="z"
            />
            <div
              className="suggestionsContainer"
              id="react-autowhatever-autocompletes"
              key="react-autowhatever-autocompletes-items-container"
              role="listbox"
              style={Object {}}
            >
              <ItemsList
                getItemId={[Function]}
                highlightedItemIndex={null}
                itemProps={[Function]}
                items={
                  Array [
                    Object {
                      "item": "apple",
                      "itemInfo": "US",
                    },
                    Object {
                      "item": "alpha",
                      "itemInfo": "Vienna",
                    },
                    Object {
                      "item": "IBM",
                      "itemInfo": "US",
                    },
                    Object {
                      "item": "kununu",
                      "itemInfo": "Vienna",
                    },
                    Object {
                      "item": "kununu",
                      "itemInfo": "US",
                    },
                    Object {
                      "item": "kununu",
                    },
                  ]
                }
                keyPrefix="react-autowhatever-autocompletes-"
                onHighlightedItemChange={[Function]}
                renderItem={[Function]}
                renderItemData={
                  Object {
                    "query": "z",
                  }
                }
                sectionIndex={null}
                theme={[Function]}
              >
                <ul
                  key="react-autowhatever-autocompletes-items-list"
                  role="listbox"
                  style={Object {}}
                >
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={0}
                    id="react-autowhatever-autocompletes--item-0"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "apple",
                        "itemInfo": "US",
                      }
                    }
                    itemIndex={0}
                    key="react-autowhatever-autocompletes-item-0"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "z",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={0}
                      id="react-autowhatever-autocompletes--item-0"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        apple
                        <span
                          className="suggestionInfo"
                        >
                           (
                          US
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={1}
                    id="react-autowhatever-autocompletes--item-1"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "alpha",
                        "itemInfo": "Vienna",
                      }
                    }
                    itemIndex={1}
                    key="react-autowhatever-autocompletes-item-1"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "z",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={1}
                      id="react-autowhatever-autocompletes--item-1"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        alpha
                        <span
                          className="suggestionInfo"
                        >
                           (
                          Vienna
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={2}
                    id="react-autowhatever-autocompletes--item-2"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "IBM",
                        "itemInfo": "US",
                      }
                    }
                    itemIndex={2}
                    key="react-autowhatever-autocompletes-item-2"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "z",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={2}
                      id="react-autowhatever-autocompletes--item-2"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        IBM
                        <span
                          className="suggestionInfo"
                        >
                           (
                          US
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={3}
                    id="react-autowhatever-autocompletes--item-3"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "kununu",
                        "itemInfo": "Vienna",
                      }
                    }
                    itemIndex={3}
                    key="react-autowhatever-autocompletes-item-3"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "z",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={3}
                      id="react-autowhatever-autocompletes--item-3"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        kununu
                        <span
                          className="suggestionInfo"
                        >
                           (
                          Vienna
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={4}
                    id="react-autowhatever-autocompletes--item-4"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "kununu",
                        "itemInfo": "US",
                      }
                    }
                    itemIndex={4}
                    key="react-autowhatever-autocompletes-item-4"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "z",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={4}
                      id="react-autowhatever-autocompletes--item-4"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        kununu
                        <span
                          className="suggestionInfo"
                        >
                           (
                          US
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={5}
                    id="react-autowhatever-autocompletes--item-5"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "kununu",
                      }
                    }
                    itemIndex={5}
                    key="react-autowhatever-autocompletes-item-5"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "z",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={5}
                      id="react-autowhatever-autocompletes--item-5"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        kununu
                      </span>
                    </li>
                  </Item>
                </ul>
              </ItemsList>
            </div>
          </div>
        </Autowhatever>
      </Autosuggest>
    </div>
  </div>
</Autocomplete>
`;

exports[`Renders suggestions container 1`] = `
<Autocomplete
  autoFocus={false}
  data={
    Object {
      "items": Array [
        Object {
          "item": "apple",
          "itemInfo": "US",
        },
        Object {
          "item": "alpha",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "IBM",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "kununu",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
        },
      ],
    }
  }
  debounceRate={500}
  disabled={true}
  error={null}
  errorSubInfo={null}
  id="autocompletes"
  inputStyle="inline"
  isRequired={true}
  label="Autocomplete"
  labelHidden={false}
  name="autocomplete"
  noSuggestionText="No results found"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onGetSuggestions={null}
  onSelectSuggestion={null}
  placeholder="Type something..."
  query={Object {}}
  requiredLabel="Required"
  scrollOffset={70}
  scrollTo={true}
  spinner={null}
  submitOnEnter={false}
  value="test"
>
  <div
    className="formGroup inline paddingTop"
    id="autocomplete-container"
  >
    <span
      className="controlNote controlLabelRequired"
    >
      Required
    </span>
    <label
      className="controlLabel"
      htmlFor="autocompletes"
    >
      Autocomplete
    </label>
    <div
      className="autoCompleteContainer"
    >
      <Autosuggest
        alwaysRenderSuggestions={false}
        focusFirstSuggestion={true}
        focusInputOnSuggestionClick={true}
        getSuggestionValue={[Function]}
        highlightFirstSuggestion={false}
        id="autocompletes"
        inputProps={
          Object {
            "autoFocus": false,
            "className": "formControl ",
            "disabled": true,
            "id": "autocompletes",
            "name": "autocomplete",
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Type something...",
            "required": true,
            "value": "a",
          }
        }
        multiSection={false}
        onSuggestionSelected={[Function]}
        onSuggestionsClearRequested={[Function]}
        onSuggestionsFetchRequested={[Function]}
        renderSuggestion={[Function]}
        renderSuggestionsContainer={[Function]}
        shouldRenderSuggestions={[Function]}
        suggestions={
          Array [
            Object {
              "item": "apple",
              "itemInfo": "US",
            },
            Object {
              "item": "alpha",
              "itemInfo": "Vienna",
            },
            Object {
              "item": "IBM",
              "itemInfo": "US",
            },
            Object {
              "item": "kununu",
              "itemInfo": "Vienna",
            },
            Object {
              "item": "kununu",
              "itemInfo": "US",
            },
            Object {
              "item": "kununu",
            },
          ]
        }
        theme={null}
      >
        <Autowhatever
          getSectionItems={[Function]}
          highlightedItemIndex={null}
          highlightedSectionIndex={null}
          id="autocompletes"
          inputProps={
            Object {
              "autoFocus": false,
              "className": "formControl ",
              "disabled": true,
              "id": "autocompletes",
              "name": "autocomplete",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": "Type something...",
              "required": true,
              "value": "a",
            }
          }
          itemProps={[Function]}
          items={
            Array [
              Object {
                "item": "apple",
                "itemInfo": "US",
              },
              Object {
                "item": "alpha",
                "itemInfo": "Vienna",
              },
              Object {
                "item": "IBM",
                "itemInfo": "US",
              },
              Object {
                "item": "kununu",
                "itemInfo": "Vienna",
              },
              Object {
                "item": "kununu",
                "itemInfo": "US",
              },
              Object {
                "item": "kununu",
              },
            ]
          }
          multiSection={false}
          renderInputComponent={[Function]}
          renderItem={[Function]}
          renderItemData={
            Object {
              "query": "a",
            }
          }
          renderItemsContainer={[Function]}
          renderSectionTitle={[Function]}
          theme={Object {}}
        >
          <div
            aria-expanded={true}
            aria-haspopup="listbox"
            aria-owns="react-autowhatever-autocompletes"
            key="react-autowhatever-autocompletes-container"
            role="combobox"
            style={Object {}}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-autocompletes"
              autoComplete="off"
              autoFocus={false}
              className="formControl "
              disabled={true}
              id="autocompletes"
              key="react-autowhatever-autocompletes-input"
              name="autocomplete"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Type something..."
              required={true}
              style={Object {}}
              type="text"
              value="a"
            />
            <div
              className="suggestionsContainer"
              id="react-autowhatever-autocompletes"
              key="react-autowhatever-autocompletes-items-container"
              role="listbox"
              style={Object {}}
            >
              <ItemsList
                getItemId={[Function]}
                highlightedItemIndex={null}
                itemProps={[Function]}
                items={
                  Array [
                    Object {
                      "item": "apple",
                      "itemInfo": "US",
                    },
                    Object {
                      "item": "alpha",
                      "itemInfo": "Vienna",
                    },
                    Object {
                      "item": "IBM",
                      "itemInfo": "US",
                    },
                    Object {
                      "item": "kununu",
                      "itemInfo": "Vienna",
                    },
                    Object {
                      "item": "kununu",
                      "itemInfo": "US",
                    },
                    Object {
                      "item": "kununu",
                    },
                  ]
                }
                keyPrefix="react-autowhatever-autocompletes-"
                onHighlightedItemChange={[Function]}
                renderItem={[Function]}
                renderItemData={
                  Object {
                    "query": "a",
                  }
                }
                sectionIndex={null}
                theme={[Function]}
              >
                <ul
                  key="react-autowhatever-autocompletes-items-list"
                  role="listbox"
                  style={Object {}}
                >
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={0}
                    id="react-autowhatever-autocompletes--item-0"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "apple",
                        "itemInfo": "US",
                      }
                    }
                    itemIndex={0}
                    key="react-autowhatever-autocompletes-item-0"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "a",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={0}
                      id="react-autowhatever-autocompletes--item-0"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        apple
                        <span
                          className="suggestionInfo"
                        >
                           (
                          US
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={1}
                    id="react-autowhatever-autocompletes--item-1"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "alpha",
                        "itemInfo": "Vienna",
                      }
                    }
                    itemIndex={1}
                    key="react-autowhatever-autocompletes-item-1"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "a",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={1}
                      id="react-autowhatever-autocompletes--item-1"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        alpha
                        <span
                          className="suggestionInfo"
                        >
                           (
                          Vienna
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={2}
                    id="react-autowhatever-autocompletes--item-2"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "IBM",
                        "itemInfo": "US",
                      }
                    }
                    itemIndex={2}
                    key="react-autowhatever-autocompletes-item-2"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "a",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={2}
                      id="react-autowhatever-autocompletes--item-2"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        IBM
                        <span
                          className="suggestionInfo"
                        >
                           (
                          US
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={3}
                    id="react-autowhatever-autocompletes--item-3"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "kununu",
                        "itemInfo": "Vienna",
                      }
                    }
                    itemIndex={3}
                    key="react-autowhatever-autocompletes-item-3"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "a",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={3}
                      id="react-autowhatever-autocompletes--item-3"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        kununu
                        <span
                          className="suggestionInfo"
                        >
                           (
                          Vienna
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={4}
                    id="react-autowhatever-autocompletes--item-4"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "kununu",
                        "itemInfo": "US",
                      }
                    }
                    itemIndex={4}
                    key="react-autowhatever-autocompletes-item-4"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "a",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={4}
                      id="react-autowhatever-autocompletes--item-4"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        kununu
                        <span
                          className="suggestionInfo"
                        >
                           (
                          US
                          )
                        </span>
                      </span>
                    </li>
                  </Item>
                  <Item
                    aria-selected={false}
                    data-section-index={null}
                    data-suggestion-index={5}
                    id="react-autowhatever-autocompletes--item-5"
                    isHighlighted={false}
                    item={
                      Object {
                        "item": "kununu",
                      }
                    }
                    itemIndex={5}
                    key="react-autowhatever-autocompletes-item-5"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "a",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      aria-selected={false}
                      data-section-index={null}
                      data-suggestion-index={5}
                      id="react-autowhatever-autocompletes--item-5"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        kununu
                      </span>
                    </li>
                  </Item>
                </ul>
              </ItemsList>
            </div>
          </div>
        </Autowhatever>
      </Autosuggest>
    </div>
  </div>
</Autocomplete>
`;

exports[`Updates value on selection 1`] = `
<Autocomplete
  autoFocus={false}
  data={
    Object {
      "items": Array [
        Object {
          "item": "apple",
          "itemInfo": "US",
        },
        Object {
          "item": "alpha",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "IBM",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
          "itemInfo": "Vienna",
        },
        Object {
          "item": "kununu",
          "itemInfo": "US",
        },
        Object {
          "item": "kununu",
        },
      ],
    }
  }
  debounceRate={500}
  disabled={true}
  error={null}
  errorSubInfo={null}
  id="autocompletes"
  inputStyle="inline"
  isRequired={true}
  label="Autocomplete"
  labelHidden={false}
  name="autocomplete"
  noSuggestionText="No results found"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onGetSuggestions={null}
  onSelectSuggestion={null}
  placeholder="Type something..."
  query={Object {}}
  requiredLabel="Required"
  scrollOffset={70}
  scrollTo={true}
  spinner={null}
  submitOnEnter={false}
  value="test"
>
  <div
    className="formGroup inline paddingTop"
    id="autocomplete-container"
  >
    <span
      className="controlNote controlLabelRequired"
    >
      Required
    </span>
    <label
      className="controlLabel"
      htmlFor="autocompletes"
    >
      Autocomplete
    </label>
    <div
      className="autoCompleteContainer"
    >
      <Autosuggest
        alwaysRenderSuggestions={false}
        focusFirstSuggestion={true}
        focusInputOnSuggestionClick={true}
        getSuggestionValue={[Function]}
        highlightFirstSuggestion={false}
        id="autocompletes"
        inputProps={
          Object {
            "autoFocus": false,
            "className": "formControl ",
            "disabled": true,
            "id": "autocompletes",
            "name": "autocomplete",
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Type something...",
            "required": true,
            "value": "apple",
          }
        }
        multiSection={false}
        onSuggestionSelected={[Function]}
        onSuggestionsClearRequested={[Function]}
        onSuggestionsFetchRequested={[Function]}
        renderSuggestion={[Function]}
        renderSuggestionsContainer={[Function]}
        shouldRenderSuggestions={[Function]}
        suggestions={Array []}
        theme={null}
      >
        <Autowhatever
          getSectionItems={[Function]}
          highlightedItemIndex={null}
          highlightedSectionIndex={null}
          id="autocompletes"
          inputProps={
            Object {
              "autoFocus": false,
              "className": "formControl ",
              "disabled": true,
              "id": "autocompletes",
              "name": "autocomplete",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": "Type something...",
              "required": true,
              "value": "apple",
            }
          }
          itemProps={[Function]}
          items={Array []}
          multiSection={false}
          renderInputComponent={[Function]}
          renderItem={[Function]}
          renderItemData={
            Object {
              "query": "apple",
            }
          }
          renderItemsContainer={[Function]}
          renderSectionTitle={[Function]}
          theme={Object {}}
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="react-autowhatever-autocompletes"
            key="react-autowhatever-autocompletes-container"
            role="combobox"
            style={Object {}}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-autocompletes"
              autoComplete="off"
              autoFocus={false}
              className="formControl "
              disabled={true}
              id="autocompletes"
              key="react-autowhatever-autocompletes-input"
              name="autocomplete"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Type something..."
              required={true}
              style={Object {}}
              type="text"
              value="apple"
            />
          </div>
        </Autowhatever>
      </Autosuggest>
    </div>
  </div>
</Autocomplete>
`;
